--- a/src/EntityFramework.Seeder.EF6.Tests/packages.config
+++ b/src/EntityFramework.Seeder.EF6.Tests/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="CsvHelper" version="2.6.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="Given" version="0.1.5034.35988" targetFramework="net45" />
+  <package id="Given.NUnit" version="0.1.5034.35989" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="NUnitTestAdapter" version="1.0" targetFramework="net45" />
 </packages>
