--- a/src/EntityFramework.Seeder.EF6/EntityFramework.Seeder.EF6.csproj
+++ b/src/EntityFramework.Seeder.EF6/EntityFramework.Seeder.EF6.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsvColumnMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seeder.cs" />
   </ItemGroup>
