Improved exception handling and error reporting
Resolves issue #3

--- a/src/EntityFramework.Seeder.EF6.Tests/EntityFramework.Seeder.EF6.Tests.csproj
+++ b/src/EntityFramework.Seeder.EF6.Tests/EntityFramework.Seeder.EF6.Tests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Domain\Country.cs" />
     <Compile Include="Domain\CountryContext.cs" />
     <Compile Include="Domain\ProvinceState.cs" />
+    <Compile Include="when_an_error_occurs_while_seeding_a_dbset.cs" />
     <Compile Include="when_seeding_an_empty_db_set_from_a_file.cs" />
     <Compile Include="when_seeding_an_empty_db_set_from_a_resource.cs" />
     <Compile Include="when_seeding_a_dbset_with_related_entites.cs" />
@@ -98,6 +99,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="ProvinceStatesResource.csv" />
+    <Content Include="CountriesFileWithErrors.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
