--- a/src/EntityFramework.Seeder.EF6/EntityFramework.Seeder.EF6.csproj
+++ b/src/EntityFramework.Seeder.EF6/EntityFramework.Seeder.EF6.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsvColumnMapping.cs" />
+    <Compile Include="EFSeederException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seeder.cs" />
   </ItemGroup>
